@@ -17,6 +17,7 @@
 #include <boost/thread/mutex.hpp>
 #include <boost/utility.hpp>
 #include <queue>
+#include <string>
 #include <unistd.h>
 
 //----------------------
@@ -68,8 +69,14 @@ public:
   // is full already then wait until somebody calls pop()
   void push (const value_type& dg) ;
 
+  // Producer thread may signal consumer thread that exception had
+  // happened by calling push_exception() with non-empty message.
+  void push_exception (const std::string& msg) ;
+
   // get one datagram from the head of the queue, if the queue is
-  // empty then wait until somebody calls push()
+  // empty then wait until somebody calls push(). If push_exception()
+  // method was called then std::runtime_error exception will be thrown
+  // wit the corresponding message.
   value_type pop() ;
 
   // completely erase all queue
@@ -82,6 +89,7 @@ private:
   // Data members
   size_t m_maxSize ;
   std::queue<value_type> m_queue ;
+  std::string m_exception;
   boost::mutex m_mutex ;
   boost::condition m_condFull ;
   boost::condition m_condEmpty ;
