@@ -39,6 +39,7 @@ namespace XtcInput {
 DgramQueue::DgramQueue ( size_t maxSize )
   : m_maxSize ( maxSize )
   , m_queue()
+  , m_exception()
   , m_mutex()
   , m_condFull()
   , m_condEmpty()
@@ -72,6 +73,20 @@ DgramQueue::push (const value_type& dg)
 
 }
 
+// Producer thread may signal consumer thread that exception had
+// happened by calling push_exception() with non-empty message.
+void
+DgramQueue::push_exception (const std::string& msg)
+{
+  boost::mutex::scoped_lock qlock(m_mutex);
+
+  // store the message
+  m_exception = msg;
+
+  // tell anybody waiting for new data
+  m_condEmpty.notify_one();
+}
+
 // get one datagram from the head of the queue, if the queue is
 // empty then wait until somebody calls push()
 DgramQueue::value_type
@@ -80,8 +95,18 @@ DgramQueue::pop()
   boost::mutex::scoped_lock qlock ( m_mutex ) ;
 
   // wait until we have something in the queue
-  while ( m_queue.empty() ) {
+  while (m_exception.empty() and m_queue.empty()) {
+
     m_condEmpty.wait( qlock ) ;
+
+    // throw exception if non-empty, reset exception message
+    if (not m_exception.empty()) {
+      std::string msg;
+      msg.swap(m_exception);
+      throw std::runtime_error(msg);
+    }
+
+    if (not m_queue.empty()) break;
   }
 
   // get a packet
